Fix horizontal scroll

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,8 @@ body {
     font-family: 'Montserrat', sans-serif;
     background-color: #F8F3FF;
     color: #303030;
-
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 h1 {
